# liia-tools

./: .coveragerc  .dockerignore  .env.sample  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mailmap  .pre-commit-config.yaml  Dockerfile  README.md  dagster.yaml  development-best-practices.md  prep_functions.py  pyproject.toml  run-samples.sh  workspace.yaml
.github/workflows/: build.yml  linting.yml  python_publish.yml  tests.yml
csdatatools/: __main__.py
csdatatools/tests/: test.py
csdatatools/util/: stream.py  tablib.py
docs/: annex_a.md  annex_a_pipeline.md  cin-report-assessment-factors.ipynb  cin-report-outcomes.ipynb  cin_census.md  cin_census_questions.md  library-dependencies.md  pipeline.md  ssda903.md
external_dataset/pipeline/: pipeline.py
liia_pipeline/: __main__.py
liiatools/: __main__.py  reformat_csv.py
liiatools/annex_a_pipeline/: cli.py  pipeline.py  stream_filters.py  stream_pipeline.py
liiatools/cin_census_pipeline/: cli.py  pipeline.py  reports.py  stream_filters.py  stream_pipeline.py  stream_record.py
liiatools/common/: _fs_serializer.py  _transform_functions.py  aggregate.py  archive.py  checks.py  constants.py  converters.py  data.py  pipeline.py  stream_errors.py  stream_filters.py  stream_pipeline.py  stream_record.py  summary.py  transform.py
liiatools/csww_pipeline/: _reports_assessment_factors.py  _reports_referrals.py  cli.py  pipeline.py  stream_filters.py  stream_parse.py  stream_pipeline.py  stream_record.py
liiatools/s251_pipeline/: cli.py  pipeline.py  stream_pipeline.py
liiatools/school_census_pipeline/: cli.py  pipeline.py
liiatools/ssda903_pipeline/: cli.py  cli_functions.py  converters.py  pipeline.py  stream_filters.py  stream_pipeline.py
liiatools/tests/: test.py
liiatools/util/: xml.py
liiatools_pipeline/: repository.py
liiatools_pipeline/assets/: external_dataset.py  ssda903.py
liiatools_pipeline/jobs/: external_dataset.py  ssda903.py  sufficiency_903.py
liiatools_pipeline/ops/: common.py  external_dataset.py  ssda903.py  sufficiency903.py
liiatools_pipeline/sensors/: location_sensor.py  sufficiency_sensor.py
tests/annex_a/: test_clean.py  test_config.py  test_configuration.py  test_converters.py  test_degrade.py  test_end_to_end.py  test_file_creator.py  test_filters.py  test_la_agg.py  test_logger.py  test_pan_agg.py  test_populate.py  test_regex.py  test_stream_filters.py
tests/cin_census/: test_agg_processes.py  test_cleaner.py  test_config.py  test_converter.py  test_end_to_end.py  test_file_creator.py  test_reports.py  (+5 more)
(+445 files in other folders)
