[tool.poetry]
name = "liiatools"
version = "0.1.5.1"
description = "Children's Services Data Tools - Utilities for cleaning and normalising CS data by Social Finance"
authors = [
    "Michael Hanks <michael.hanks@socialfinance.org.uk>",
    "Patrick Troy <patrick.troy@socialfinance.org.uk>",
    "Céline Gross <celine.m.gross@gmail.com>",
    "Kaj Siebert <kaj@k-si.com>",
    "Matthew Pugh <matthew.pugh@socialfinance.org.uk>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.1"
more-itertools = "^8.12.0"
sfdata-stream-parser = "0.4.1"
xmlschema = "^1.10.0"
click = "^8.1.2"
PyYAML = "^6.0"
tablib = {extras = ["cli", "xlsx"], version = "^3.2.0"}
regex = "^2022.4.24"
dacite = "^1.6.0"
XlsxWriter = "^3.0.3"
pandas = "^1.4.2"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
click-log = "^0.4.0"
cchardet = "2.1.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"
safety = "^1.10.3"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
